--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>
+      Free Online Golf Game : Play Famous Golf Courses | WGT : World Golf Tour
+      </title>
+      <link rel="icon" type="image/png" sizes="32x32" href="/icon32.png">
+      <meta property="og:site_name" content="World Golf Tour - WGT.com">
+      <meta property="og:title" content="World Golf Tour - WGT.com">
+      <meta property="og:image" content="https://securewgt-a.akamaihd.net/assets/community/images/wgt/wgt_logo_share.png?0.171.8718_1067">
+
   </head>
   <body>
     <div id="root"></div>
